fix horizontal scrolling bug

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,7 @@
+#main_wrapper{
+    overflow-x: hidden;
+}
+
 /* General grid */
 .grid-main{
     display: grid;
